--- a/rancher-cluster.yml
+++ b/rancher-cluster.yml
@@ -1,42 +1,37 @@
 # Cluster Nodes
 nodes:
-  - address: 192.168.10.5
+  - address: 172.16.128.4
     user: root
     role: 
       - controlplane
       - etcd
       - worker
     docker_socket: /var/run/docker.sock
-  - address: 192.168.10.6
-    user: root
-    role:
-      - worker
-    docker_socket: /var/run/docker.sock
 
 # Name of the K8s Cluster
-cluster_name: downstream1-cluster
+cluster_name: rancher-cluster
 
 services:
   kube-api:
     # IP range for any services created on Kubernetes
     # This must match the service_cluster_ip_range in kube-controller
-    service_cluster_ip_range: 192.168.0.0/16
+    service_cluster_ip_range: 172.16.0.0/16
     # Expose a different port range for NodePort services
     service_node_port_range: 30000-32767    
     pod_security_policy: false
 
   kube-controller:
     # CIDR pool used to assign IP addresses to pods in the cluster
-    cluster_cidr: 192.167.0.0/16
+    cluster_cidr: 172.15.0.0/16
     # IP range for any services created on Kubernetes
     # This must match the service_cluster_ip_range in kube-api
-    service_cluster_ip_range: 192.168.0.0/16
+    service_cluster_ip_range: 172.16.0.0/16
   
   kubelet:
     # Base domain for the cluster
     cluster_domain: cluster.local
     # IP address for the DNS service endpoint
-    cluster_dns_server: 192.168.0.10
+    cluster_dns_server: 172.16.0.10
     # Fail if swap is on
     fail_swap_on: false
 
